[package]
name = "sasktran2-core"
version = "0.1.0"
edition = "2024"
links = "sasktran2_core"

[build-dependencies]
version_check = "*"
cxx-build = "1.0"

[dependencies]
ndarray = {version = "*", features = ["rayon"] }
num = "*"
anyhow = "*"
cxx = "1.0"
gauss-quad = "0.2.4"
rayon = "*"
wide = { version = "0.7.33", optional = true }

[dev-dependencies]
criterion = "*"

[features]
nightly = ["simd"]
simd = ["dep:wide"]

[lib]
crate-type = ["staticlib", "rlib"]

[[bench]]
name = "twostream"
harness = false
