[package]
name = "core_rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
ndarray = { version = "0.16.1", features = ["rayon"]}
numpy = { version = "0.24" }
sasktran2-rs = { path = "../sasktran2-rs" }  # your existing core Rust lib
rayon = "*"
anyhow = "*"
