[package]
name = "core_rust"
version = "2025.11.2"
edition = "2024"

[lib]
name = "_core_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py39"] }
ndarray = { version = "0.16.1", features = ["rayon"]}
numpy = { version = "0.27" }
sasktran2-rs = { path = "../sasktran2-rs" }
rayon = "*"
anyhow = "*"

[features]
nightly = ["sasktran2-rs/nightly"]
