[package]
name = "sasktran2-rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
version_check = "*"

[dependencies]
ndarray = {version = "*", features = ["rayon"] }
num = "*"
anyhow = "*"
sasktran2-sys = { version = "*", path = "../sasktran2-sys" }
sasktran2-core = { version = "*", path = "../sasktran2-core" }
rayon = "*"
libc = "*"

[features]
nightly = ["simd"]
simd = []
