[package]
name = "sasktran2-sys"
version = "0.1.0"
edition = "2024"
build = "build.rs"
links = "sasktran2"

include = [
    "src/**",
    "build.rs",
    "Cargo.toml",
    "vendor/**",     # include the C++ code
]

[features]
default = []
build-bindings = ["dep:bindgen"]

[build-dependencies]
cmake = "*"
bindgen = { version = "*", optional = true }

[dependencies]
ndarray = "*"
anyhow = "*"
